syntax = "proto3";

package sfc_invite;

option csharp_namespace = "SFC.Invite.Contracts.Messages.Find.Filters";

message GetInvitesFilter
{
}