syntax = "proto3";

package sfc_invite;

import "Models/Invite/invite.proto";

option csharp_namespace = "SFC.Invite.Contracts.Messages.Find";

message GetInvitesResponse
{
    repeated Invite items = 1;
}