syntax = "proto3";

package sfc_invite;

option csharp_namespace = "SFC.Invite.Contracts.Messages.Get";

message GetInviteRequest
{
    int64 id = 1;
}