syntax = "proto3";

package sfc_invite;

import "google/protobuf/wrappers.proto";

option csharp_namespace = "SFC.Invite.Contracts.Models.Common";

message RangeLimit
{
    google.protobuf.Int32Value from = 1;
    google.protobuf.Int32Value to = 2;
}